--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3012",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "npx prettier --write ."
-  },
-  "dependencies": {
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.6",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "eventsource-parser": "^1.0.0",
-    "framer-motion": "^10.12.16",
-    "jotai": "^2.2.0",
-    "js-base64": "^3.7.5",
-    "lucide-react": "^0.241.0",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^8.0.7",
-    "remark-gfm": "^3.0.1",
-    "tailwind-merge": "^1.13.1",
-    "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "@swc-jotai/react-refresh": "^0.0.8",
-    "prettier": "^2.8.8"
-  }
+    "name": "my-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 3012",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "npx prettier --write ."
+    },
+    "dependencies": {
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.6",
+        "@radix-ui/react-scroll-area": "^1.0.4",
+        "@radix-ui/react-select": "^1.2.2",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.1.4",
+        "@radix-ui/react-tooltip": "^1.0.6",
+        "@types/node": "20.2.5",
+        "@types/react": "18.2.9",
+        "@types/react-dom": "18.2.4",
+        "autoprefixer": "10.4.14",
+        "class-variance-authority": "^0.6.0",
+        "clsx": "^1.2.1",
+        "eslint": "8.42.0",
+        "eslint-config-next": "13.4.4",
+        "eventsource-parser": "^1.0.0",
+        "framer-motion": "^10.12.16",
+        "jotai": "^2.2.0",
+        "js-base64": "^3.7.5",
+        "lucide-react": "^0.241.0",
+        "next": "13.4.4",
+        "postcss": "8.4.24",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-markdown": "^8.0.7",
+        "remark-gfm": "^3.0.1",
+        "tailwind-merge": "^1.13.1",
+        "tailwindcss": "3.3.2",
+        "tailwindcss-animate": "^1.0.6",
+        "typescript": "5.1.3"
+    },
+    "devDependencies": {
+        "@swc-jotai/react-refresh": "^0.0.8",
+        "prettier": "^2.8.8"
+    }
 }
