--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.4",
         "@radix-ui/react-tooltip": "^1.0.6",
+        "@types/marked": "^5.0.0",
         "@types/node": "20.2.5",
         "@types/react": "18.2.9",
         "@types/react-dom": "18.2.4",
@@ -31,6 +32,9 @@
         "jotai": "^2.2.0",
         "js-base64": "^3.7.5",
         "lucide-react": "^0.241.0",
+        "marked": "^5.1.0",
+        "marked-gfm-heading-id": "^3.0.4",
+        "marked-mangle": "^1.1.0",
         "next": "13.4.4",
         "postcss": "8.4.24",
         "react": "18.2.0",
